// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action redux should handle ADD_TRIP 1`] = `
Object {
  "add": Object {
    "response": Object {
      "data": Object {
        "created_at": "2020-08-18 17:12:00",
        "driver_name": "John Doe",
        "end_station": "Semarang",
        "eta": "2020-08-20 00:00:00",
        "start_station": "Surabaya",
        "status": "Transit",
      },
    },
  },
  "lists": Object {},
}
`;

exports[`action redux should handle ADD_TRIP_LOADING 1`] = `
Object {
  "add": Object {
    "loading": true,
  },
  "lists": Object {},
}
`;

exports[`action redux should handle LOGIN 1`] = `
Object {
  "add": Object {},
  "lists": Object {},
}
`;

exports[`action redux should handle LOGIN_ERROR 1`] = `
Object {
  "add": Object {},
  "lists": Object {},
}
`;

exports[`action redux should handle LOGIN_LOADING 1`] = `
Object {
  "add": Object {},
  "lists": Object {},
}
`;

exports[`action redux should handle TRIP_LIST 1`] = `
Object {
  "add": Object {},
  "lists": Object {
    "response": Object {
      "_id": "5f521f25d899cd03e8b4de79",
      "created_at": "2020-08-18 17:12:00",
      "driver_name": "John Doe",
      "end_station": "Semarang",
      "eta": "2020-08-20 00:00:00",
      "start_station": "Surabaya",
      "status": "Transit",
    },
  },
}
`;

exports[`action redux should handle TRIP_LIST_LOADING 1`] = `
Object {
  "add": Object {},
  "lists": Object {
    "response": undefined,
  },
}
`;

exports[`action redux should return initial state 1`] = `
Object {
  "add": Object {},
  "lists": Object {},
}
`;

exports[`action user redux should handle LOGIN 1`] = `
Object {
  "login": Object {
    "response": undefined,
  },
}
`;

exports[`action user redux should handle LOGIN_ERROR 1`] = `
Object {
  "login": Object {
    "error": Object {
      "error": "Username not found",
    },
  },
}
`;

exports[`action user redux should handle LOGIN_LOADING 1`] = `
Object {
  "login": Object {
    "loading": true,
  },
}
`;

exports[`action user redux should return initial state 1`] = `
Object {
  "login": Object {},
}
`;

exports[`reducer user redux should handle LOGIN 1`] = `
Object {
  "login": Object {
    "response": undefined,
  },
}
`;

exports[`reducer user redux should handle LOGIN_ERROR 1`] = `
Object {
  "login": Object {
    "error": Object {
      "error": "Username not found",
    },
  },
}
`;

exports[`reducer user redux should handle LOGIN_LOADING 1`] = `
Object {
  "login": Object {
    "loading": true,
  },
}
`;

exports[`reducer user redux should return initial state 1`] = `
Object {
  "login": Object {},
}
`;
